Align titles, operating date, and CTAs with hacky fixed heights

--- a/sass/_hosting.scss
+++ b/sass/_hosting.scss
@@ -22,7 +22,7 @@
         .provider_card {
             display: flex;
             flex-direction: column;
-            align-items: center;
+            justify-content: space-between;
 
             padding: 24px;
 
@@ -32,35 +32,37 @@
             border: 1px solid #D2D2D2;
             border-radius: 16px;
 
-            .provider_logo_container {
-                flex: 4 0 160px;
-            }
-
-            h3 {
-                flex: 4 0 5rem;
-                margin: 0;
+            .details {
                 text-align: center;
 
-                font-style: normal;
-                font-weight: 700;
-                font-size: 2rem;
-                line-height: 120%;
-            }
+                .provider_logo_container {
+                    height: 10rem;
+                }
 
-            .operating_since {
-                flex: 1 0 1rem;
-            }
+                h3 {
+                    height: 5rem;
+                    margin: 0;
+                    text-align: center;
 
-            p {
-                flex: 10 0;
+                    font-style: normal;
+                    font-weight: 700;
+                    font-size: 2rem;
+                    line-height: 120%;
+                }
+
+                .operating_since {
+                    height: 1.5rem;
+                    font-size: .9rem;
+                }
+
             }
 
             .call-to-action {
-                flex: 1 0;
                 background-color: #000;
                 color: #fff;
                 border-radius: 1000px;
                 padding: .4rem 2rem;
+                align-self: center;
             }
         }
     }
